feat: production-ready hardening & Dataproc 2.3 compatibility
- Implemented 30-min TTL in native ACK_RESERVOIR to prevent memory leaks.
- Aligned Spark connector with Dataproc 2.3 (Spark 3.5.3, Java 11).
- Added multi-platform support (macOS .dylib / Linux .so) for native loading.
- Implemented Zero-Config features: Automated projectId inference & global spark.conf support.
- Hardened FFI safety by aligning arrow-rs (51.0.0) with Arrow Java (15.0.2).
- Achieved warning-free build for both Rust (clippy) and Scala (-Xlint).
- Added comprehensive TROUBLESHOOTING.md and updated README.md.