@@ -39,9 +39,9 @@ cd ../spark && java -jar sbt-launch.jar "spark35/package"
 
 ### 3. Usage Example (Read)
 ```scala
+// projectId and numPartitions are inferred automatically!
 val df = spark.readStream
   .format("pubsub-native")
-  .option("projectId", "my-gcp-project")
   .option("subscriptionId", "my-subscription")
   .load()
 
@@ -50,13 +50,48 @@ df.writeStream.format("console").start()
 
 ### 4. Usage Example (Write)
 ```scala
-inputDf.select("payload") // Must have 'payload' (Binary)
+inputDf.select("payload") 
   .writeStream
   .format("pubsub-native")
-  .option("projectId", "my-gcp-project")
   .option("topicId", "my-topic")
   .start()
 ```
+
+## 🌊 Visual Data Flow Summary
+
+To achieve high performance, the connector uses a multi-layered approach:
+1.  **Native Layer (Rust)**: Pulls raw bytes from Pub/Sub and packs them into **Arrow Columns** in native memory (off-heap).
+2.  **JNI Bridge**: Passes a **memory pointer** (not the data) to Spark, ensuring zero-copy handover.
+3.  **Spark Layer (Scala)**: Reads directly from that pointer using the Arrow Vector API, keeping the JVM heap empty and GC pressure low.
+
+## ⚙️ Configuration Reference
+
+The connector supports three levels of configuration:
+1.  **Explicit Options**: Provided via `.option("key", "value")`.
+2.  **Global Spark Conf**: Set via `--conf spark.pubsub.<key>=<value>`.
+3.  **Smart Defaults**: Automatically inferred (e.g., `projectId`).
+
+| Category | Option | Default | Description |
+| :--- | :--- | :--- | :--- |
+| **Connection** | `projectId` | *Inferred* | Google Cloud Project ID. Inferred from Spark env or Dataproc. |
+| (Required) | `subscriptionId` | **Required** | Pub/Sub Subscription ID (for Reads). |
+| | `topicId` | **Required** | Pub/Sub Topic ID (for Writes). |
+| **Performance** | `batchSize` | `1000` | Messages to buffer before flush. |
+| (Optional) | `numPartitions` | *Parallelism* | Number of read partitions. Defaults to cluster cores. |
+| | `lingerMs` | `1000` | Max wait time before flushing (Sink). |
+| | `maxBatchBytes`| `5000000` | Max batch size in bytes (Sink). |
+| **Debugging** | `jitterMs` | `500` | Random startup delay. |
+| | `emulatorHost` | - | Pub/Sub Emulator host/port. |
+
+## 🛠️ Mandatory JVM Flags (Java 17+)
+
+If running on Java 17 or 21 (required for Spark 4.0 and often used for 3.5), you **must** add the following options to your Spark job to allow Arrow and JNI to access internal memory:
+
+```bash
+--conf "spark.driver.extraJavaOptions=--add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED" \
+--conf "spark.executor.extraJavaOptions=--add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+```
+For a full list of optimization flags, see [TROUBLESHOOTING.md](TROUBLESHOOTING.md).
 
 ## 📄 License
 This project is licensed under the **MIT-0 (MIT No Attribution)** license. See [LICENSE](LICENSE) for details.
